# sample-gladimgui

./: CMakeLists.txt  README.md  gitignore  gpp_build.bat  gpp_build_dependencies.bat
app/src/: CMakeLists.txt  example.cpp  main.cpp
app/srcinc/: example.hpp
